# ref-engine

./: .flake8  .gitignore  Bash  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/skills/build-test-verify/: SKILL.md
.claude/skills/create-pull-request/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/self-review-checklist/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
artifacts/: ref_AEON_Sentinel_Sovereign_Intelligence_2_p_20260315_024413.json  ref_Cognitive_Fidelity_Dynamics_pdf_20260315_024413.json  ref_JEA1-Cognitive-Architecture_pdf_20260315_024413.json  ref_Metaphysical_Cartography_pdf_20260315_024413.json  ref_Sovereign_AI_Immune_System_pdf_20260315_024413.json  ref_The-Spark-Node-Protocol-10_pdf_20260315_024413.json  ref_The_Cosmic_Schematics_pdf_20260315_024413.json  ref_corpus_analysis_20260315_024413.json  ref_deep_analysis.json  ref_demo_comparison.json  ref_full_comparison.json  ref_manifest_20260315_024413.json  ref_report.html
docs/: architecture.md
docs/agent-guides/: build-test-verify.md  core-conventions.md
src/ref_engine/: __init__.py  analytics.py  analytics_renderer.py  corpus_injector.py  differential_analyser.py  feature_extractor.py  file_parser.py  json_exporter.py  pipeline.py  quaternion.py  ref.py  report_renderer.py  scoring_engine.py
tests/: test_feature_extractor.py  test_file_parser.py  test_quaternion.py  test_scoring_engine.py
